# gicp

./: .gitignore  next.config.js  package.json  theme.ts
backend/: Cargo.toml
backend/macros/: Cargo.toml
backend/macros/src/: lib.rs
backend/src/: config.rs  fs.rs  handlers.rs  main.rs
components/: DataTable.tsx  Footer.tsx  Header.tsx
components/admin/: Login.tsx  Manage.tsx
components/apply/: Form.tsx
pages/: 404.tsx  _app.tsx  admin.tsx  apply.tsx  index.tsx  list.tsx
pages/id/: 1.tsx  [id].tsx
