[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
include_dir = "0.7.3"
log = "0.4.17"
mime_guess = "2.0.4"
once_cell = "1.17.0"
pretty_env_logger = "0.4.0"
salvo = { version = "0.37.9", features = ["cors", "rustls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "mysql", "postgres", "macros"] }
tokio = { version = "1.24.2", features = ["macros"] }
toml = "0.7.0"
macros = { path ="./macros" }
